Use deep-filter.
Now non-collection values are maintained.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "deep-compact",
   "version": "0.1.2",
-  "description": "Recursively compacts values, removing empty values from your arrays & objects",
+  "description": "Recursively compacts collection values (arrays and objects), removing empty values from your arrays & objects",
   "main": "index.js",
   "scripts": {
     "test": "mocha -R spec"
